# OOP_Labs

./: CMakeLists.txt
Labs/: CMakeLists.txt
Labs/lab1/: README.md
Labs/lab1/test/: unit.cpp
Labs/lab2/: CMakeLists.txt  README.md
Labs/lab3/: CMakeLists.txt  main.cpp
Labs/lab3/include/: array.h  figure.h  point.h  rectangle.h  square.h  tools.h  trapeze.h
Labs/lab3/src/: exceptions.cpp  figure.cpp  point.cpp  rectangle.cpp  square.cpp  tools.cpp  trapeze.cpp
Labs/lab3/test/: test_array.cpp  test_figure.cpp  test_point.cpp  test_rectangle.cpp  test_square.cpp  test_tools.cpp  test_trapeze.cpp
Labs/lab4/: CMakeLists.txt  main.cpp
Labs/lab4/include/: array.h  exceptions.h  figure.h  point.h  rectangle.h  square.h  tools.h  trapeze.h
Labs/lab4/src/: tools.cpp
Labs/lab4/test/: test_array.cpp  test_figure.cpp  test_point.cpp  test_rectangle.cpp  test_square.cpp  test_tools.cpp  test_trapeze.cpp
Labs/lab5/: README.md
Labs/lab6/: README.md
Labs/lab7/: README.md
cmake/: RequersOptions.cmake
lab1/: CMakeLists.txt
lab1/solution/: solution.hpp
